# qfeng_validation

./: .env.example  .gitignore  CLAUDE.md  README.md  _tmp_diagnose_merge.py  _tmp_rebuild_blast.py  _tmp_smoke_dbc.py  _tmp_task2_cnes_lt.py  _tmp_task3_demas_vepi.py  _tmp_task4_toh_semanal.py  _tmp_task5_crossval.py  mempalace.yaml  pyproject.toml  run_c4_scenarios.py  run_integration_tests.py
artefatos/: README.md
configs/: advocacia_trabalhista.yaml  sus_validacao.yaml
corpora/: CORPUS_MANIFEST.md
corpora_clingo/: _normas_rastreabilidade.json  _vocabulario.json
docs/: README.md
outputs/: RELATORIO_FRENTE1_FINAL.md  api_demas_vepi_probe.json  bi_dimensional_decision.json  bi_dimensional_decision_semanal.json  bi_validation_report.md  correlacao_toh_srag_fase215bis.json  cross_validacao_fvs_demas_fase215bis.csv  diagnostico_t_mort_zero.md  e2_report.md  e2_report_trabalhista.md  frente1_analise_descritiva.md  frente1_delta_se_antecipacao.json  relatorio_fase1_bi_bivariado.md  relatorio_fase215bis_executivo.md  relatorio_fase2_bi_bivariado.md  relatorio_fase2_continuacao_26abr2026.md  relatorio_validacao_semanal.md  setup_pysus_fase215bis.md  sivep_gripe_unavailable.md  source_manifest_srag.json  toh_interpolacao_log.md
scripts/: _audit_paper_atom_refs.py  _check_dups.py  _check_parquets.py  _check_tst_context.py  _check_tst_suffix.py  _cleanup_stale_figure_text.py  _diagnose_f7_orphans.py  _diagnose_f7_orphans_part2.py  _diagnose_f7_orphans_part3.py  _diagnose_psi_s.py  _fase4_validation.py  _fase6_table7.py  _find_s5.py  _fix_diagram4_prose.py  _read_data.py  (+68 more)
(+517 files in other folders)
